--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@mantine/hooks": "^7.17.1",
     "@reduxjs/toolkit": "^2.6.0",
     "@tailwindcss/vite": "^4.0.11",
+    "axios": "^1.8.4",
     "clsx": "^2.1.1",
     "lucide-react": "^0.477.0",
     "motion": "^12.5.0",
